--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mocha": "^10.0.0"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.6.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
