--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@walletconnect/web3-provider": "^1.7.8",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "tronweb": "^4.2.0",
     "web3": "^1.7.3"
   }
 }
