--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "mocha": "^10.0.0"
   },
   "dependencies": {
+    "@alch/alchemy-web3": "^1.4.6",
     "@openzeppelin/contracts": "^4.6.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "logs-decoder": "^3.1.4",
     "tronweb": "^4.2.0",
     "web3": "^1.7.3"
   }
